--- a/inst/tutorials/06largescale/largescale.Rmd
+++ b/inst/tutorials/06largescale/largescale.Rmd
@@ -58,10 +58,15 @@ print(rBA)
 </div>
 
 ```{r rab-solution1, echo=FALSE}
+msg <- sprintf("The rate constant $r_{AB}$ relates to the total flux $F_{AB}$ as : $r_{AB}=F_{AB}/A$; the steady-state value of $F_{AB}$ and $A$ are given by $Z=50$ and $X=500$ respectively, so the answer is: $r_{AB}= Z/X$")
+
 question("What is the value of the rate constant $r_{AB}$?", type = "learnr_radio",
  answer(sprintf("%.3f $yr^{-1}$", Z/Y)),
  answer(sprintf("%.3f $yr^{-1}$", X/Z)),
- answer(sprintf("%.2f $yr^{-1}$", Z/X), correct=TRUE)
+ answer(sprintf("%.2f $yr^{-1}$", Z/X), correct=TRUE),
+ incorrect = msg,   
+ correct = msg
+ 
 )
 ```
 
@@ -115,28 +120,35 @@ Modify the R-code to implement two types of perturbation of the system:
 
 Note that after some time the system reaches a steady state. Think how this steady state depends on the type of perturbation.
 
-```{r model2box, exercise=TRUE, echo=FALSE}
+```{r model2box-setup}
+X <- 500
+Y <- 2500
+Z <- 50
+```
+
+```{r model2box, exercise=TRUE, echo=FALSE, exercise.lines = 22}
 require(deSolve)
-# model function
-model2box <- function(t, s, p){
+
+model2box <- function(t, s, p){  # model function
   with( as.list(c(s, p)), {
     dA.dt <- -rAB*A + rBA*B
     dB.dt <-  rAB*A - rBA*B
     return(list(c(dA.dt, dB.dt), SUM = A + B))
   })
 }
-# model parameters
-pars <- c(rAB = Z/X, rBA = Z/Y)
-# initial state
+pars <- c(rAB = Z/X, rBA = Z/Y)  # model parameters
+
+# initial states
 state.ini1 <- c(A = X, B = Y)         # steady state
 state.ini2 <- c(A = X-10, B = Y+10)   # perturbed
-# time sequence
-t.seq <- seq(from=0, to=100, by=1)
+
+t.seq <- seq(from=0, to=100, by=1)    # time sequence
+
 # calculate the solutions
 out1 <- ode(y=state.ini1, time=t.seq, func=model2box, parms=pars)
 out2 <- ode(y=state.ini2, time=t.seq, func=model2box, parms=pars)
-# plot the solutions
-plot(out1,out2, lwd=2, mfrow=c(1,3))
+
+plot(out1,out2, lwd=2, mfrow=c(1,3))  # plot solutions
 ```
 
 ## Challenging questions
@@ -165,35 +177,56 @@ c(tau.AB=tau.AB, A.eq=A.eq, B.eq=B.eq)
 </div>
 
 ```{r Tab-solution1, echo=FALSE}
+msg <- "Using the hint, you should be able to derive the formula $r=r_{AB}+r_{BA}$, from which you can calculate $\\tau_{AB}$."
+
+
 question("What is the value of the response time $\\tau_{AB}$?", type = "learnr_radio",
  answer(sprintf("%.3f $yr$", 1/(Z/X + 0*Z/Y))),
  answer(sprintf("%.3f $yr$", 1/(0*Z/X + Z/Y))),
  answer(sprintf("%.2f $yr$", 1/(Z/X + Z/Y)), correct=TRUE),
  
- incorrect="Incorrect. Using the hint, you should be able to derive the formula $r=r_{AB}+r_{BA}$, from which you can calculate $\\tau_{AB}$."
+ incorrect=paste("Incorrect.", msg),
+ correct=paste("Correct.", msg)
 )
 ```
 
 ```{r Tab-solution2, echo=FALSE}
+msg <- "Using the hint, you should be able to derive the formula $$A_{eq}=\\frac{r_{BA}}{r_{AB}+r_{BA}}\\cdot (A_{ini}+B_{ini}),$$ from which you can calculate $A_{eq}$ considering that $A_{ini}+B_{ini}=X+Y+100$."
+
 question("What is the value of the equilibrium carbon content in reservoir A?", type = "learnr_radio",
  answer(sprintf("%.3f $Pg~C$", Y/(X+Y)*(X+Y+100))),
  answer(sprintf("%.3f $Pg~C$", X/(X+Y)*(X+Y+100)), correct=TRUE),
  answer(sprintf("%.2f $Pg~C$", X/(X+Y)*(X+Y+80))),
  
- incorrect = "Incorrect. Using the hint, you should be able to derive the formula $$A_{eq}=\\frac{r_{BA}}{r_{AB}+r_{BA}}\\cdot (A_{ini}+B_{ini}),$$ from which you can calculate $A_{eq}$ considering that $A_{ini}+B_{ini}=X+Y+100$."
+ incorrect = paste("Incorrect.", msg),
+ correct = paste("Correct.", msg) 
 )
 ```
 
 ```{r Tab-solution3, echo=FALSE}
+msg <- "Using the hint, you should be able to derive the formula $$B_{eq}=\\frac{r_{AB}}{r_{AB}+r_{BA}}\\cdot (A_{ini}+B_{ini}),$$ from which you can calculate $B_{eq}$ considering that $A_{ini}+B_{ini}=X+Y+100$."
+
 question("What is the value of the equilibrium carbon content in reservoir B?", type = "learnr_radio",
  answer(sprintf("%.3f $Pg~C$", Y/(X+Y)*(X+Y+100)), correct=TRUE),
  answer(sprintf("%.3f $Pg~C$", X/(X+Y)*(X+Y+100))),
  answer(sprintf("%.2f $Pg~C$", Y/(X+Y)*(X+Y+80))),
  
- incorrect = "Incorrect. Using the hint, you should be able to derive the formula $$B_{eq}=\\frac{r_{AB}}{r_{AB}+r_{BA}}\\cdot (A_{ini}+B_{ini}),$$ from which you can calculate $B_{eq}$ considering that $A_{ini}+B_{ini}=X+Y+100$."
+ incorrect = paste("Incorrect.", msg),
+ correct = paste("Correct.", msg)
          )
 ```
 
 ## Slides
 
 Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
+
+## References
+
+R Core Team (2020). R: A language and environment for statistical computing. R
+  Foundation for Statistical Computing, Vienna, Austria. https://www.R-project.org/.
+
+Karline Soetaert, Thomas Petzoldt, R. Woodrow Setzer (2010). Solving Differential
+  Equations in R: Package deSolve. Journal of Statistical Software, 33(9), 1--25.
+  DOI: 10.18637/jss.v033.i09. http://www.jstatsoft.org/v33/i09/
+
+Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
